# rev-deps

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/rev_deps/: __about__.py  __init__.py  __main__.py  api.py  cli.py  core.py
tests/: __init__.py
