[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rev-deps"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "JamesParrott", email = "80779630+JamesParrott@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/JamesParrott/rev-deps#readme"
Issues = "https://github.com/JamesParrott/rev-deps/issues"
Source = "https://github.com/JamesParrott/rev-deps"

[tool.hatch.version]
path = "src/rev_deps/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/rev_deps tests}"

[tool.coverage.run]
source_pkgs = ["rev_deps", "tests"]
branch = true
parallel = true
omit = [
  "src/rev_deps/__about__.py",
]

[tool.coverage.paths]
rev_deps = ["src/rev_deps", "*/rev-deps/src/rev_deps"]
tests = ["tests", "*/rev-deps/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
